--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -74,10 +74,16 @@
                         </li>
                     </ul>
                 </div>
-
+                {% if request.user.is_authenticated %}
+                    <a class="custom-btn btn btn-danger" href="{% url 'auth-logout'%}">Logout</a>
+                    <p class="text muted small mb-4 mb-lg-0"> Hola {{request.user}}</p>
+                    <img src="{{imagen_url}}" style="max-width: 15px;">
+                {% else %}
                 <div class="d-none d-lg-block">
-                    <button type="button" class="custom-btn btn btn-danger" data-bs-toggle="modal" data-bs-target="#BookingModal">Login In</button>
+                    <a class="custom-btn btn btn-danger" href="{% url 'auth-login' %}">Login</a>
+                    <a class="custom-btn btn btn-danger" href="{% url 'auth-register' %}">Register</a> 
                 </div>
+                {% endif %}
 
             </div>
         </nav>
