--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -34,6 +34,13 @@
             width: 100%;
             height: 100%;
             }
+            .div_red{
+                background-color:#f62b53;
+                border-radius: 20px;
+                word-wrap: break-word;
+                height: 250px;
+                width: 500px;
+            }
         </style>
     </head>
     
@@ -116,80 +123,21 @@
                     <div class="row">
 
                         <div class="col-12">
-                            <h2 class="text-center mb-lg-5 mb-4">Marcas Favoritas</h2>
+                            {% if request.user.is_authenticated %}
+                                <h2 class="text-center mb-lg-5 mb-4">Bienvenido {{request.user}}</h2>
+                            {% else %}
+                                <h2 class="text-center mb-lg-5 mb-4">Bienvenido</h2>
+                            {% endif %}
                         </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="menu-thumb">
-                                <div class="menu-image-wrap">
-                                    <img><img src="{% static 'PaginaAutos/images/ford.jpg' %}" class="img-fluid menu-image" alt=""></img>
-                                </div>
-
-                                <div class="menu-info d-flex flex-wrap align-items-center">
-                                    <h4 class="mb-0">Ford</h4>
-                                </div>
-                            </div>
+                        <div class="div_red" style="position:relative; bottom:0px; right:5px; left: 600px;">
+                                <h5 class="text-center mb-lg-5 mb-4">Cars Library es una pagina donde puedes buscar los mejores autos de las mejores marcas <br> sientete libre de buscar autos para poder saber lo mejor de cada uno
+                                </h5>
                         </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="menu-thumb">
-                                <div class="menu-image-wrap">
-                                    <img><img src="{% static 'PaginaAutos/images/chevrolet.jpg' %}" class="img-fluid menu-image" alt=""></img>
-                                </div>
-
-                                <div class="menu-info d-flex flex-wrap align-items-center">
-                                    <h4 class="mb-0">Chevrolet</h4>
-                                </div>
-                            </div>
+                        <div style="position:relative; bottom:250px; right:0px;">
+                            <img src="{% static 'PaginaAutos/images/OIP.jpg'%}" style="position: absolute; border-radius: 10px;">
                         </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="menu-thumb">
-                                <div class="menu-image-wrap">
-                                    <img><img src="{% static 'PaginaAutos/images/audis.jpg' %}" class="img-fluid menu-image" alt=""></img>
-                                </div>
-
-                                <div class="menu-info d-flex flex-wrap align-items-center">
-                                    <h4 class="mb-0">Audi</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="menu-thumb">
-                                <div class="menu-image-wrap">
-                                    <img><img src="{% static 'PaginaAutos/images/ferrari.jpg' %}" class="img-fluid menu-image" alt=""></img>
-                                </div>
-
-                                <div class="menu-info d-flex flex-wrap align-items-center">
-                                    <h4 class="mb-0">Ferrari</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="menu-thumb">
-                                <div class="menu-image-wrap">
-                                    <img><img src="{% static 'PaginaAutos/images/lamborgini.jpg' %}" class="img-fluid menu-image" alt=""></img>
-                                </div>
-
-                                <div class="menu-info d-flex flex-wrap align-items-center">
-                                    <h4 class="mb-0">Lamborgini</h4>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="menu-thumb">
-                                <div class="menu-image-wrap">
-                                    <img><img src="{% static 'PaginaAutos/images/volkswagen.jpg' %}" class="img-fluid menu-image" alt=""></img>
-                                </div>
-
-                                <div class="menu-info d-flex flex-wrap align-items-center">
-                                    <h4 class="mb-0">Volkswagen</h4>
-                                </div>
-                            </div>
-                        </div>
+                        <br><br>
+                        <center><h6>Recuerda que puedes ver las marcas con las que trabajamos puedes visitar el apartado de <a href="{% url 'autos-marcas' %}">marcas</a></h6></center>
 
                     </div>
                 </div>
