--- a/PaginaAutos/templates/PaginaAutos/logout.html
+++ b/PaginaAutos/templates/PaginaAutos/logout.html
@@ -2,5 +2,13 @@
 
 
 {% block contenido %}
-    <p> Tu sesion se ha cerrado </p>
+    
+<section>
+    <div class="d-flex justify-content-center align-items-center ">
+        <div class="pe-5 ps-5 bg-white rounded text-secondary shadow" style="width: 30rem">
+            <center><h4> Tu sesion se ha cerrado </h4></center>
+        </div>
+    </div>
+</section>
+    
 {% endblock %}
