--- a/PaginaAutos/templates/PaginaAutos/contacto.html
+++ b/PaginaAutos/templates/PaginaAutos/contacto.html
@@ -1,29 +1,25 @@
 {% extends 'PaginaAutos/index.html'%}
 
 {% block contenido %}
-<head>
-    <style>
-        .social-buttons {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 8px;
-        }
-    </style>
-</head>
+
 {% load static %}
-<section class="menu section-padding">
-    <center><h2 class="text-black mb-lg-5 mb-3">Contacto</h2></center>
-    <center>Juan Cruz Gonzalez </center>
-    <center>juancgonzalez0901@gmail.com</center>
-    <p>
-    <center>Felipe Da Rosa </center>
-    <center>felidrf@gmail.com</center>
-    </p>
-    <p>
-    <center>Victor Mariano Cuba Larrain </center>
-    <center>email@gmail.com</center>
-    </p>
+
+<section>
+    <div class="d-flex justify-content-center align-items-center " style="border-radius: 5px;">
+        <div class="pe-5 ps-5 bg-white rounded text-secondary shadow" style="width: 30rem">
+            <center><h2 class="text-black mb-lg-5 mb-3">Contacto</h2></center>
+            <center>Juan Cruz Gonzalez </center>
+            <center>juancgonzalez0901@gmail.com</center>
+            <p>
+            <center>Felipe Da Rosa </center>
+            <center>felidrf@gmail.com</center>
+            </p>
+            <p>
+            <center>Victor Mariano Cuba Larrain </center>
+            <center>email@gmail.com</center>
+            </p>
+        </div>
+    </div>
 </section>
 
 
