--- a/PaginaAutos/templates/PaginaAutos/mensaje_form.html
+++ b/PaginaAutos/templates/PaginaAutos/mensaje_form.html
@@ -2,26 +2,29 @@
 
 {% block contenido %}
 <head>
-    <style>
-        .btn-out{
-            right: 100%;
-        }
-    </style>
 </head>
 {% load static %}
 <section class="menu section-padding">
-    <center><h2 class="text-black mb-lg-5 mb-3">Chat Global</h2></center>
+    <center><h2 class="text-black mb-lg-5 mb-3">Bienvenido a Chat Global</h2></center>
     <div id="wrapper">
       <div id="menu">
-        <h3 class="welcome">Bienvenido<b></b></h3>
         <p><a style="position:absolute; bottom:50px; right:50px;"href="{% url 'autos-inicio' %}" class="custom-btn btn btn-danger">Salir del Chat</a></p>
     </div>
     </div>
     <ul>
         <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Enviar">
+            <div>
+                <center class="btn-custom btn btn-danger text-white" style="height: 46px;">{{ form.non_field_errors }}
+                    <div class="fieldWrapper">
+                      {{ form.errors }}
+                      {{ form.label_tag }}
+                      {{ form }}
+                      <span class="helptext">{{ form.help_text }}</span>
+                    </div></center>
+            </div>
+            <br>
+            <input type="submit" value="Enviar" class="btn-success">
         </form>
 
         
