creacion de superusuario en BBDD y actualizacion de template para mostrar mensajes de usuarios

--- a/PaginaAutos/templates/PaginaAutos/mensaje_form.html
+++ b/PaginaAutos/templates/PaginaAutos/mensaje_form.html
@@ -25,10 +25,12 @@
             </div>
             <br>
             <input type="submit" value="Enviar" class="btn-success">
+            <a class="nav-link" href="{% url 'chat-list' %}">Ver mensajes de usuarios</a>
         </form>
-
         
     </ul>
+
+
 </section>
 
 
