--- a/Accounts/templates/Accounts/index.html
+++ b/Accounts/templates/Accounts/index.html
@@ -68,12 +68,13 @@
                 </div>
                 {% if request.user.is_authenticated %}
                     <a class="custom-btn btn btn-danger" href="{% url 'auth-logout'%}">Logout</a>
-                    <p class="text muted small mb-4 mb-lg-0"> Hola {{request.user}}</p>
+                    <a class="text muted small mb-4 mb-lg-0" href="{% url 'auth-edit' %}"> Hola {{request.user}}</a>
                     <img src="{{imagen_url}}" style="max-width: 15px;">
                 {% else %}
                 <div class="d-none d-lg-block">
                     <a class="custom-btn btn btn-danger" href="{% url 'auth-login' %}">Login</a>
                     <a class="custom-btn btn btn-danger" href="{% url 'auth-register' %}">Register</a> 
+
                 </div>
                 {% endif %}
 
