--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -68,7 +68,7 @@
                 </div>
                 {% if request.user.is_authenticated %}
                     <a class="custom-btn btn btn-danger" href="{% url 'auth-logout'%}">Logout</a>
-                    <p class="text muted small mb-4 mb-lg-0"> Hola {{request.user}}</p>
+                    <a class="text muted small mb-4 mb-lg-0" href="{% url 'auth-edit' %}"> Hola {{request.user}}</a>
                     <img src="{{imagen_url}}" style="max-width: 15px;">
                 {% else %}
                 <div class="d-none d-lg-block">
