--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -34,12 +34,17 @@
             width: 100%;
             height: 100%;
             }
-            .div_red{
-                background-color:#f62b53;
-                border-radius: 20px;
-                word-wrap: break-word;
-                height: 250px;
-                width: 500px;
+            .div_vert{
+            background-color:#f62b53;
+            word-wrap: break-word;
+            padding-right: 15px;
+            padding-bottom: 22px;
+            }
+            .div_horizontal{
+            background-color:#f62b53;
+            word-wrap: break-word;
+            padding-left: 105px;
+            padding-bottom: 22px;
             }
         </style>
     </head>
@@ -129,16 +134,17 @@
                                 <h2 class="text-center mb-lg-5 mb-4">Bienvenido</h2>
                             {% endif %}
                         </div>
-                        <div class="div_red" style="position:relative; bottom:0px; right:5px; left: 600px;">
-                                <h5 class="text-center mb-lg-5 mb-4">Cars Library es una pagina donde puedes buscar los mejores autos de las mejores marcas <br> sientete libre de buscar autos para poder saber lo mejor de cada uno
-                                </h5>
+                        <div style="position:relative; bottom:0px; right:5px; left: 600px; height: 240px; width: 500px;">
+                                <h6 class="text-center mb-lg-5 mb-4">Cars Library es una pagina donde puedes buscar los mejores autos de las mejores marcas <br> sientete libre de buscar autos para poder saber lo mejor de cada uno
+                                </h6>
                         </div>
-                        <div style="position:relative; bottom:250px; right:0px;">
+                        <div style="position:relative; bottom:250px; left:25px;">
                             <img src="{% static 'PaginaAutos/images/OIP.jpg'%}" style="position: absolute; border-radius: 10px;">
                         </div>
                         <br><br>
                         <center><h6>Recuerda que puedes ver las marcas con las que trabajamos puedes visitar el apartado de <a href="{% url 'autos-marcas' %}">marcas</a></h6></center>
-
+                        <div class="div_vert" style="bottom: 15px; position: absolute; left: 15px; right: 15px;"></div>
+                        <div class="div_horizontal" style="bottom: 15px; position: absolute; left: 15px; right: 15px;"></div>
                     </div>
                 </div>
             </section>
