Creación del Avatar
se creó el modelo Avatar para así poder agregarle una imagen a cada perfil.

--- a/PaginaAutos/templates/PaginaAutos/contacto.html
+++ b/PaginaAutos/templates/PaginaAutos/contacto.html
@@ -16,7 +16,7 @@
             </p>
             <p>
             <center>Victor Mariano Cuba Larrain </center>
-            <center>email@gmail.com</center>
+            <center>victorm.cubal17@gmail.com</center>
             </p>
         </div>
     </div>
