--- a/Accounts/templates/Accounts/index.html
+++ b/Accounts/templates/Accounts/index.html
@@ -69,7 +69,8 @@
                 {% if request.user.is_authenticated %}
                     <a class="custom-btn btn btn-danger" href="{% url 'auth-logout'%}">Logout</a>
                     <a class="text muted small mb-4 mb-lg-0" href="{% url 'auth-edit' %}"> Hola {{request.user}}</a>
-                    <img src="{{imagen_url}}" style="max-width: 15px;">
+                    <img src="{{imagen_url}}" style="max-width: 25px 10px;">
+                    <img src="{{imagen_url}}" alt="">
                 {% else %}
                 <div class="d-none d-lg-block">
                     <a class="custom-btn btn btn-danger" href="{% url 'auth-login' %}">Login</a>
