Caambios en README y SOBRE NOSOTROS, algunos arreglos en vistas

--- a/PaginaAutos/templates/PaginaAutos/mensaje_form.html
+++ b/PaginaAutos/templates/PaginaAutos/mensaje_form.html
@@ -12,7 +12,7 @@
     </div>
     </div>
     <ul>
-        <form method="post">
+        <form onReset="función" method="post">
             {% csrf_token %}
             <div>
                 <center class="btn-custom btn btn-danger text-white" style="height: 46px;">{{ form.non_field_errors }}
