--- a/PaginaAutos/templates/PaginaAutos/mensaje_list.html
+++ b/PaginaAutos/templates/PaginaAutos/mensaje_list.html
@@ -4,11 +4,12 @@
 {% load static %}
 <section class="menu section-padding">
     {% for m in object_list %}
-            <li id="header">
-                <span><h7>{{m.user}}</h7></span>|
-                <span><h7>{{m.tiempo}}</h7></span>|
+            
+            <ol id="header">
+                <span><h7>{{m.user}}</h7></span>(
+                <span>{{m.tiempo}})</span>:
                 <span><h7>{{m.mensaje}}</h7></span>                
-            </li>
+            </ol>
             <br>
     {% endfor %}
 </section>
