--- a/PaginaAutos/templates/PaginaAutos/nosotros.html
+++ b/PaginaAutos/templates/PaginaAutos/nosotros.html
@@ -3,8 +3,15 @@
 {% block contenido %}
 {% load static %}
 <section class="menu section-padding">
-    <center><h2 class="text-balck mb-lg-5 mb-3">Sobre Nostros</h2></center> 
-    <center>Hola nosotros somos un grupo de programadores los cuales buscan poder facilitar la busqueda de autos para entuciastas del medio. <br> Nuestro objetivo es que cada persona que tenga una duda sobre cualquier auto pueda consultarla en este sitio <br> Incluso tenemos un chat global para que cada usuario comparta datos los cuales quiza no esten en la pagina</center>
+    <center><h2 class="text-balck mb-lg-5 mb-3">Sobre Nosotros</h2></center> 
+    <center>Un grupo de programadores que en la busqueda de su proyecto final crearon este sitio, para entuciastas de los autos, con busqueda de distintas marcas y chat entre usuarios. 
+        <br>
+        <br><h6>Juan Cruz Gonzalez</h6> 
+        <br>
+        <br> <h6>Felipe Da Rosa</h6> Ingeniero agronomo de profesion permanentenemente conectando los dos mundos, el agro con la programacion en Python. Siempre buscando desafios.
+        <br>
+        <br> <h6>Victor Cuba Larrain</h6> 
+    </center>
 </section>
 
 
