cambios en template detalle de imagen Juan

--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -139,7 +139,7 @@
                         {% endif %}
                     </div>
                     <div style="position:relative; bottom:0px; right:5px; left: 600px; height: 240px; width: 500px;">
-                        <h6 class="text-center mb-lg-5 mb-4">Cars Library es una pagina donde puedes buscar los mejores autos de las mejores marcas <br> sientete libre de buscar autos para poder saber lo mejor de cada uno
+                        <h6 class="text-center mb-lg-5 mb-4">Cars Library es una pagina donde puedes buscar autos de las mejores marcas <br> sientete libre de buscar autos para poder saber lo mejor de cada uno
                         </h6>
                 </div>
                     <div style="position:relative; bottom:260px; left:25px;">
