--- a/PaginaAutos/templates/PaginaAutos/auto_detalle.html
+++ b/PaginaAutos/templates/PaginaAutos/auto_detalle.html
@@ -5,7 +5,7 @@
 <section class="menu section-padding">
 
     <p>Auto: {{auto}}</p>
-    <img src="{{auto.imagen.url}}">
+    <img src="{{auto.imagen.url}}" style="width: 30%;height: 20%;">
     
 
 </section>
