actualizacion de template sobre nosotros

--- a/PaginaAutos/templates/PaginaAutos/nosotros.html
+++ b/PaginaAutos/templates/PaginaAutos/nosotros.html
@@ -6,11 +6,11 @@
     <center><h2 class="text-balck mb-lg-5 mb-3">Sobre Nosotros</h2></center> 
     <center>Un grupo de programadores que en la busqueda de su proyecto final crearon este sitio, para entuciastas de los autos, con busqueda de distintas marcas y chat entre usuarios. 
         <br>
-        <br><h6>Juan Cruz Gonzalez</h6> 
+        <br><h6>Juan Cruz Gonzalez</h6> Estudiante de programacion, 21 años, entro a este mundo desde la secundaria. Me apasiona mucho programar y poder aprender nuevas tecnologías.
         <br>
-        <br> <h6>Felipe Da Rosa</h6> Ingeniero agronomo de profesion permanentenemente conectando los dos mundos, el agro con la programacion en Python. Siempre buscando desafios.
+        <br> <h6>Felipe Da Rosa</h6> Ingeniero agronomo de profesion, 31 años, permanentenemente conectando los dos mundos, el agro con la programacion en Python. Siempre buscando desafios.
         <br>
-        <br> <h6>Victor Cuba Larrain</h6> 
+        <br> <h6>Victor Cuba Larrain</h6> Tras intentos de encontrar algo que guste descubrí gracias a unos amigos el maravilloso mundo de la programación y aunque Python es mi primer lenguaje no será el ultimo.
     </center>
 </section>
 
