modificacion en template detalle autos, volver a lista de autos

--- a/PaginaAutos/templates/PaginaAutos/nosotros.html
+++ b/PaginaAutos/templates/PaginaAutos/nosotros.html
@@ -8,9 +8,9 @@
         <br>
         <br><h6>Juan Cruz Gonzalez</h6> Estudiante de programacion, 21 años, entro a este mundo desde la secundaria. Me apasiona mucho programar y poder aprender nuevas tecnologías.
         <br>
-        <br> <h6>Felipe Da Rosa</h6> Ingeniero agronomo de profesion, 31 años, permanentenemente conectando los dos mundos, el agro con la programacion en Python. Siempre buscando desafios.
+        <br> <h6>Felipe Da Rosa</h6> Ingeniero agronomo de profesion, 31 años, intento permanente en conectar los dos mundos, el agro con la programacion en Python. Siempre buscando desafios.
         <br>
-        <br> <h6>Victor Cuba Larrain</h6> Tras intentos de encontrar algo que guste descubrí gracias a unos amigos el maravilloso mundo de la programación y aunque Python es mi primer lenguaje no será el ultimo.
+        <br> <h6>Victor Cuba Larrain</h6> Tras intentos de encontrar algo que guste con 22 años descubrí gracias a unos amigos el maravilloso mundo de la programación y aunque Python es mi primer lenguaje no será el ultimo.
     </center>
 </section>
 
