--- a/PaginaAutos/templates/PaginaAutos/auto_detalle.html
+++ b/PaginaAutos/templates/PaginaAutos/auto_detalle.html
@@ -6,7 +6,9 @@
 
     <p>Auto: {{auto}} </p>
     <img src="{{auto.imagen.url}}" style="width: 30%;height: 20%;">
-    
+    <div id="menu">
+        <p><a style="position:absolute; bottom:50px; right:50px;"href="{% url 'autos-list' %}" class="custom-btn btn btn-danger">Volver a lista de autos</a></p>
+    </div>
 
 </section>
 {% endblock %}
