Dejando funcional el modelo Marcas con el template de detalle en el nombre de la marca

--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -75,7 +75,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'autos-marcas' %}">Marcas</a>
+                            <a class="nav-link" href="{% url 'marcas-list' %}">Marcas</a>
                         </li>
 
                         <li class="nav-item">
@@ -146,7 +146,7 @@
                         <img src="{% static 'PaginaAutos/images/OIP.jpg'%}" style="position: absolute; border-radius: 10px;">
                     </div>
                     <br><br><br><br>
-                    <center><h6>Recuerda que puedes ver las marcas con las que trabajamos puedes visitar el apartado de <a href="{% url 'autos-marcas' %}">marcas</a></h6></center>
+                    <center><h6>Recuerda que puedes ver las marcas con las que trabajamos puedes visitar el apartado de <a href="{% url 'marcas-list' %}">marcas</a></h6></center>
                     <div class="div_vert" style="bottom: 15px; position: absolute; left: 15px; right: 15px;"></div>
                     <div class="div_horizontal" style="bottom: 15px; position: absolute; left: 15px; right: 15px;"></div>
                 </div>
