--- a/PaginaAutos/templates/PaginaAutos/mensaje_list.html
+++ b/PaginaAutos/templates/PaginaAutos/mensaje_list.html
@@ -12,6 +12,9 @@
             </ol>
             <br>
     {% endfor %}
+    <div id="menu">
+        <p><a style="position:absolute; bottom:50px; right:50px;"href="{% url 'autos-chat' %}" class="custom-btn btn btn-danger">Volver</a></p>
+    </div>
 </section>
 {% endblock %}
 
